# pure-pulsars

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Pipfile  README.md  config.env  docker.env  json.json  noxfile.py  pure-pulsars-firebase-adminsdk-e6qzr-f209635a5a.json  pyproject.toml  requirements-dev.txt  requirements.txt  throttle.ctrl
docs/: template.md
docs/meetings/: meeting_notes_7_19_2024.md
src/: __init__.py  bot_runners.py  button_class.py  main.py  test.py  utils.py  wikiutils.py
src/cmds/: challenge.py  h.py  help_bot.py  leaderboard.py  never.py  rabbit_hole.py  reset_scores.py  setup_guild.py  sync.py  user_info.py  wikianimal.py  wikicategories.py  wikiguesser.py  wikiguesser_class.py  wikirandom.py  wikisearch.py
src/database/: database.py  database_core.py  database_errors.py  databse.py  errors.py  leaderboard.py  test.json  user.py
tests/unit/wikiutils/: test_articlegenerator.py  test_utility_functions.py
webpage/: .firebaserc  firebase.json  index.html
webpage/public/: index.html  privacy-policy.html  terms-of-service.html
